# bevy_new_2d

./: .gitignore  Cargo.toml  Cargo.toml.template  README-CI-CD.md  README-TOOLS.md  README.md  Trunk.toml  cargo-generate.toml  post-generate.rhai  readme.md
.github/workflows/: cargo-generate.yaml  ci.yaml  release.yaml  release.yaml.liquid  release.yaml.template
docs/: design.md  known-issues.md  tooling.md  workflows.md
src/: asset_tracking.rs  assets.rs  audio.rs  audio.rs.template  bevy_setup.rs  dev.rs  dev_tools.rs  lib.rs  lib.rs.template  main.rs  main.rs.template  spawn.rs
src/audio/: bgm.rs  mod.rs  sfx.rs  sound_effects.rs  soundtrack.rs
src/bevy_setup/: mod.rs
src/core/: asset.rs  booting.rs  camera.rs  deflicker.rs  dev.rs  mod.rs  window.rs
src/core/dev/: mod.rs
src/core/game/: mod.rs
src/core/loading/: mod.rs
src/core/menu/: credits.rs  mod.rs
src/core/ready/: mod.rs
src/core/ready/game/: mod.rs
src/core/ready/menu/: credits.rs  mod.rs
src/demo/: animation.rs  level.rs  mod.rs  movement.rs  player.rs
src/demo/spawn/: mod.rs
src/dev/: mod.rs
src/game/: animation.rs  assets.rs  audio.rs  level.rs  mod.rs  movement.rs  physics.rs  render.rs  spawn_level.rs
src/game/audio/: mod.rs  sfx.rs  sound_effects.rs  soundtrack.rs
src/game/spawn/: level.rs  mod.rs  player.rs
src/loading/: mod.rs
src/ready/: mod.rs
src/screen/: boot.rs  credits.rs  deflicker.rs  loading.rs  mod.rs  playing.rs  splash.rs  title.rs
src/screen/splash/: mod.rs
src/screens/: credits.rs  gameplay.rs  loading.rs  mod.rs  playing.rs  splash.rs  title.rs
src/theme/: interaction.rs  mod.rs  widget.rs  widgets.rs
src/ui/: interaction.rs  mod.rs  mouse_hover.rs  widgets.rs
src/ui_tools/: interaction.rs  mod.rs  palette.rs  widgets.rs
src/util/: interaction.rs  mod.rs  spawn.rs  spawn_trigger.rs  widgets.rs
src/util/ui/: interaction.rs  mod.rs  mouse_hover.rs  palette.rs  widgets.rs
web/: index.html  index.html.template  style.css
